--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,58 @@
+alembic==1.14.1
+aniso8601==10.0.1
+attrs==25.3.0
+bcrypt==4.0.1
 blinker==1.8.2
+certifi==2025.10.5
+charset-normalizer==3.4.4
 click==8.1.8
+cloudinary==1.44.1
+distlib==0.4.0
+filelock==3.16.1
+flasgger==0.9.7.1
 Flask==3.0.3
-gunicorn==23.0.0
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.6.0
+Flask-Mail==0.10.0
+flask-marshmallow==1.2.1
+Flask-Migrate==4.1.0
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
+idna==3.11
 importlib_metadata==8.5.0
+importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+Mako==1.3.10
 MarkupSafe==2.1.5
+marshmallow==3.22.0
+marshmallow-sqlalchemy==1.1.1
+mistune==3.1.4
 packaging==25.0
+passlib==1.7.4
+pipenv==2024.4.1
+pkgutil_resolve_name==1.3.10
+platformdirs==4.3.6
+psycopg2-binary==2.9.10
+PyJWT==2.9.0
+python-dotenv==1.0.1
+python-http-client==3.3.7
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.35.1
+requests==2.32.4
+rpds-py==0.20.1
+sendgrid==6.10.0
+six==1.17.0
+SQLAlchemy==2.0.44
+SQLAlchemy-serializer==1.4.12
+starkbank-ecdsa==2.2.0
+stripe==6.6.0
+typing_extensions==4.13.2
+urllib3==2.2.3
+virtualenv==20.33.1
 Werkzeug==3.0.6
 zipp==3.20.2
